force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <description>Shows the available stocks on our purchases</description>
    <label>Inventory</label>
    <nameField>
        <label>Sl No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>