force-app/main/default/objects/Inventory__c/fields/Avg_Cost_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Avg_Cost_Per_Kg__c</fullName>
    <description>Weighted average purchase cost. Updated by trigger on each purchase. Used to calculate profit on sales.</description>
    <label>Avg Cost Per Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>