force-app/main/default/objects/Inventory__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Holiday 250g</fullName>
            </value>
            <value>
                <fullName>Laddu 100g</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>