force-app/main/default/objects/Inventory__c/fields/Last_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date__c</fullName>
    <description>Auto-updated by trigger when a new purchase arrives. Helps you see how fresh the stock is.</description>
    <label>Last Purchase Date</label>
    <type>Date</type>
</CustomField>