force-app/main/default/objects/Inventory__c/fields/Packet_Count__c.field-meta.xml
<CustomField>
    <fullName>Packet_Count__c</fullName>
    <formula>ROUND(
    CASE(
        TEXT(Packet_Type__c),
        &quot;100g&quot;, Remaining_Quantity__c * 10,
        &quot;250g&quot;, Remaining_Quantity__c * 4,
        0
    ),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packet Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>