force-app/main/default/objects/Inventory__c/fields/Packet_Type__c.field-meta.xml
<CustomField>
    <fullName>Packet_Type__c</fullName>
    <label>Packet Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100g</fullName>
            </value>
            <value>
                <fullName>250g</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>