force-app/main/default/objects/Inventory__c/fields/Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Sold__c</fullName>
    <description>Total KGs sold from this brand&apos;s stock. Default value = 0</description>
    <label>Quantity Sold (Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>