force-app/main/default/objects/Inventory__c/fields/Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Quantity__c</fullName>
    <description>Current stock available. Default value = 0. This is the most important field.</description>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>