force-app/main/default/objects/Inventory__c/fields/Shrinkage__c.field-meta.xml
<CustomField>
    <fullName>Shrinkage__c</fullName>
    <description>Weight lost to moisture, damage, used samples. Default = 0. Manually updated.</description>
    <label>Shrinkage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>