force-app/main/default/objects/Inventory__c/fields/Shrinkage_History__c.field-meta.xml
<CustomField>
    <fullName>Shrinkage_History__c</fullName>
    <label>Shrinkage History</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON log of every shrinkage entry for this brand: [{date, amount, notes}]. Each entry is added on top of the running total; used to show a dated history with reasons.</description>
</CustomField>