force-app/main/default/objects/Inventory__c/fields/Shrinkage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shrinkage_Notes__c</fullName>
    <label>Shrinkage Notes</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Reason / remarks for the recorded shrinkage on this brand (e.g. moisture loss, damaged packets, samples given).</description>
    <inlineHelpText>Why was this stock lost? e.g. moisture, damaged packets, samples.</inlineHelpText>
</CustomField>