force-app/main/default/objects/Inventory__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <description>Total KGs ever purchased of this brand. Default value = 0</description>
    <label>Total Quantity (Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>